--- a/src/styles.css
+++ b/src/styles.css
@@ -1,26 +1,28 @@
 #anchorPane{
 	
-	-fx-background-color:black;
+	-fx-background-color:#357E8F;
 	
 }
 #BtPiedra{
 	-fx-background-image:url("piedra90.jpg");
-	-fx-border-radius:20px;
+	-fx-background-radius:20px;
 	
 }
 #BtPapel{
 	-fx-background-image:url("papel90.jpg");
-	-fx-border-radius:20px;
+	-fx-background-radius:20px;
 	
 }
 #BtTijera{
 	-fx-background-image:url("tijera90x61.jpg");
-	
+	-fx-background-radius:20px;
 }
 #btjugar{
 	-fx-background-color:green;
 }
 #letras{
-	-fx-background-color:red;
+	-fx-background-color:#1A587E;
+	-fx-background-radius: 25px;
 	
 }
+
